# SKaiNET-build-tools

./: .dockerignore  .gitignore  CLI_USAGE.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  iree-config.yml  pyproject.toml  requirements.txt  test-cuda-config.json  test_basic_integration.py  test_checkpoint.py  test_compilation_readiness.py
.kiro/specs/docker-iree-integration/: design.md  requirements.md  tasks.md
.kiro/steering/: python-uv-development.md
cli/: iree-docker-compile
config/: example-compile-config.json  example-config.json
config/examples/: cpu-config.json  metal-config.json  vulkan-config.json
config/schema/: compile-config-schema.json
docker/cpu/: Dockerfile
docker/cuda/: Dockerfile
docker/cuda/scripts/: .gitkeep
docs/: README.md  api.md  examples.md  setup.md  troubleshooting.md
examples/: .gitkeep
input/: .gitkeep
iree_docker_integration/: __init__.py  cli.py  config_validator.py  docker_manager.py  file_handler.py  utils.py
output/: .gitkeep
scripts/: build-images.sh  compile-with-iree.sh  docker-status.sh  local-dev.sh  manage-config.sh  validate-config.sh
